# NodeBearingVectorSystemLegacy

./: .gitignore  CMakeLists.txt  KeyConcept.py  Readme.md  lineTest1.py  lineTest2.py  main.cpp  stresstest1.py  stresstest2.py  stresstest3.py  test.py  test2.py  test5.py  test6.py
client/blender/: getLinerSegment.py  test.py
client/maya/: camera.py  test.py
module/: AttributeManager.h  AttributesManager.h  BearingVector.h  CoordinateConverter.cpp  CoordinateConverter.h  LinerSegment.cpp  LinerSegment.h  NodeVector.h  SocketClient.h  SocketServer.cpp  SocketServer.h  SurfaceSegment.cpp  SurfaceSegment.h  YamlConverter.cpp  YamlConvertor.h  draw.cpp  draw.h
module/operator/: AttributesManager.cpp  CoordinateConverter.h  Draw.cpp  Draw.h  YamlConverter.cpp  YamlConverter.h
module/segment/: LinerSegment.h  SurfaceSegment.h
module/vectors/: BearingVector.cpp  BearingVector.h  NodeVector.cpp  NodeVector.h  Vector3.cpp  Vector3.h
test/: NodeVectorTest.cpp  NodeVectorTest.h
